# evaluations-reference

./: .env.example  .gitignore  README.md  TUTORIAL.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_dataset.json
examples/json_extraction/: dataset.json  v1.txt  v2.txt
examples/sentiment/: dataset.json  v1.txt  v2.txt
examples/summarization/: dataset.json  v1.txt  v2.txt
src/evaluations_reference/: __init__.py  bootstrap.py  candidate.py  cli.py  client.py  compare.py  errors.py  models.py  runner.py  ui.py
src/evaluations_reference/lenses/: __init__.py  code_checks.py  human.py  judge.py
tests/: conftest.py  test_backends.py  test_bootstrap.py  test_cli.py  test_cli_m2.py  test_client.py  test_code_checks.py  test_compare.py  test_dataset_roundtrip.py  test_dotenv.py  test_examples.py  test_human.py  test_placeholder.py  test_progress.py  test_runner.py  test_ui.py
