[project]
name = "evaluations-reference"
version = "1.0.0"
description = "A production-mindful, three-lens evaluation harness for LLM systems: deterministic checks, model-as-judge, and human-grade, with a side-by-side prompt comparison flow."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Charles Cozad" }]
dependencies = [
    "anthropic>=0.40",
    "gradio>=5.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
evals = "evaluations_reference.cli:main"

[project.urls]
Repository = "https://github.com/ccozad/evaluations-reference"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluations_reference"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=evaluations_reference --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["evaluations_reference"]

[tool.coverage.report]
exclude_also = [
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
